# fantasy_team_selector

./: README.md  app.py  config.py  create_prices.py  exploration.ipynb  migrate_db.py  pyproject.toml  upload_schedule.py  upload_scores.py
data/: player_master_list.csv  ratings.csv  test.csv
noteboooks/: exploration.ipynb
sql/: db.sql
