[project]
name = "fantasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "st-gsheets-connection>=0.1.0",
    "st-supabase-connection>=2.1.3",
    "streamlit>=1.55.0",
    "supabase>=2.28.3",
]
